@@ -2052,15 +2052,16 @@ For positive @var{op},
 the exponential integral is the sum of Euler's constant, of the logarithm
 of @var{op}, and of the sum for k from 1 to infinity of
 @ifnottex
-@var{op} to the power k, divided by k and factorial(k).
+@var{op} to the power k, divided by k and factorial(k)
 @end ifnottex
 @tex
-$@var{op}^k/(k \cdot k!)$.
+$@var{op}^k/(k \cdot k!)$
 @end tex
+(see formula 5.1.10 from the Handbook of Mathematical Functions from
+Abramowitz and Stegun).
 For negative @var{op}, @var{rop} is set to NaN
-(this definition for negative argument follows formula 5.1.2 from the
-Handbook of Mathematical Functions from Abramowitz and Stegun, a future
-version might use another definition).
+(this definition for negative argument follows formula 5.1.2 from the same
+reference, a future version might use another definition).
 @end deftypefun
 
 @deftypefun int mpfr_li2 (mpfr_t @var{rop}, mpfr_t @var{op}, mpfr_rnd_t @var{rnd})
