@@ -1,5 +1,5 @@
 #!/bin/bash
-# Usage: nightly-test <GMPDIR> <CC> <BRANCH> 
+# Usage: nightly-test <GMPDIR> <CC> <BRANCH>
 set -e
 GMP="$1"
 CC="$2"
@@ -22,7 +22,7 @@ autoreconf -i
 # deactivate the support of C99 features in the configure (as they
 # will give an error) and to test that MPFR can be built with a
 # C90-only compiler.
-if [ "$CC" == "g++" ]; then
+if [ "$CC" = "g++" ]; then
    ./configure --with-gmp="$GMP" --enable-assert=full --enable-decimal-float \
    --enable-float128 \
    --disable-shared --enable-thread-safe --enable-tests-timeout=60 \
@@ -45,7 +45,7 @@ export MPFR_SKIP_EXTREME=1
 VERBOSE=1 make check
 # reconfigure for mpfrbench
 make distclean
-if [ "$CC" == "g++" ]; then
+if [ "$CC" = "g++" ]; then
    ./configure --with-gmp="$GMP" --disable-shared CC="$CC"
 else
 # removed -ansi since it is incompatible with --enable-decimal-float
